<?xml version="1.0"?>
<package format='2'>
  <name>manipulator-kinematics</name>
  <version>1.0.0</version>
  <description>
  This package contains the introduction to robotics 
  </description>
  <maintainer email="shashankrajivmoghe@gmail.com">Shashank Rajiv Moghe</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>geometry_msgs</depend>

  <depend>rosparam</depend>

</package>
